--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,18 @@
   height: 20vmin;
 }
 
+.Pic {
+  width: 100%;
+  height: 550px;
+}
+
+.SpaceDiv {
+  height: 400px;
+}
+
 .App-header {
-  background-color: #282c34;
-  min-height: 30vh;
+  background-color: #282c34; /* #282c34 */
+  min-height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -20,6 +29,10 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.btn {
+  margin-top: 30px;
 }
 
 @keyframes App-logo-spin {
